 $Id: ChangeLog,v 1.131.2.25.2.24 2009/03/18 01:14:34 uehira Exp $

2009-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.18) : remove unused variables.
	
2009-03-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.17) : make prototypes.
	
2009-03-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus4.c src/ls7000_A9 : fixed bug.

2009-03-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.9) : MAP mode reactivate.
	* Version 2.0.5 released.

2009-03-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus4, ls7000_A8, ls7000_A9 : added.
	* src/ls8tel_STM.c, src/ls8tel_STS.c : 64 bit clean
	* Version 2.0.4 released.

2009-02-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.92 released.
	* configure.in : FFLAGS added "-fno-automatic -finit-local-zero"

2009-02-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MFH.
	* prog/win_m : do not use "-kanjifont". comment out.

2009-02-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.91 released.
	* src/shmdump.c : bug fixed.

2009-01-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : added MKSWAPS.
	* src/recvt.c : bug fixed in send_req(). SWAPS --> MKSWAPS.
	* src/shmdump.c : fixed bugs?
	* prog/ee_manager : tail +5 --> tail -n +5 (for Linux system)

2008-12-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.89 release.
	* src/shmdump.c : fixed bugs.

2008-12-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* getopt() : EOF --> -1

2008-12-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2fix() : use win_chheader_info().
	* src/recvt : 64 bit clean?
	* Version 2.0.3 released.

2008-12-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.88 release.
	* src/events.c : added NetBSD specific macro.
	* src/recvnmx.c, src/recvs.c, src/recvstatus.c, src/recvstatus2.c,
	  src/recvt.c, src/relay.c, src/send_raw.c, src/send_raw_old.c,
 	  src/sends.c :
	   include arpa/inet.h if exists.