@@ -1,5 +1,11 @@
- $Id: ChangeLog,v 1.131.2.25.2.24 2009/03/18 01:14:34 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.25 2009/03/19 13:21:24 uehira Exp $
 
+2009-03-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* src/win.c (2009.3.19) : 
+	  define_bm(lBitmap *, char, int, int, char *);	--> 
+	       define_bm(lBitmap *, char, unsigned int, unsigned int, char *);
+	  width_dpy,height_dpy : int --> unsigned int
+	
 2009-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/win.c (2009.3.18) : remove unused variables.
 	
